infra/k8s/comment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
  labels:
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: tanvvv/comments
        

---
apiVersion: v1
kind: Service
metadata:
  name: comment-serv
spec:
  selector:
    app: comments
  ports:
  - protocol: TCP
    port: 4002 #service
    targetPort: 4002 #pod
